public/styles.css
header{
    background: url(img/header2.png) center;
    background-size: cover;
    min-height: 100vh;
    z-index: 1;
    }
.layer{
    background-color: rgba(46, 45, 32, 0.5);
    position: absolute;
    top: 64px;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 2
}
.header-text{
    z-index: 4;
}
@media screen and (max-width:800px){
    header{
        min-height:400px;
    }
}
    .section{
        padding-top: 4vw;
        padding-bottom: 4vw;
    }
.tabs .indicator{
    background-color: grey;
}
.tabs .tab a:focus, .tabs .tab a:focus.active{
    background: transparent;
}

